--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -1,22 +1,29 @@
 .home-page {
   position: relative;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .hero-section {
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: flex-end;
   text-align: center;
   color: rgb(0, 79, 74);
-  background: url('../assets/images/hero.gif') 
+  background-image: url('/hero.gif');
   background-size: cover !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
   background-attachment: scroll;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .video-background {
@@ -34,7 +41,8 @@
   position: relative;
   z-index: 1;
   width: 100%;
-  padding: 0 2rem 4rem 2rem;
+  padding: 0 0 4rem 0;
+  margin: 0;
 }
 
 .hero-title {
@@ -134,7 +142,7 @@
   box-shadow:
     0 20px 40px rgba(0, 0, 0, 0.3),
     0 0 50px rgba(111, 2, 214, 0.2);
-  margin: 2rem;
+  margin: 0;
 }
 
 .hero-logo {
