--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -17,7 +17,7 @@
   align-items: flex-end;
   text-align: center;
   color: rgb(0, 79, 74);
-  background-image: url('/hero.gif');
+  background-image: url('/public/hero.gif');
   background-size: cover !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
