--- a/puper/frontend/src/styles/globals.css
+++ b/puper/frontend/src/styles/globals.css
@@ -3,15 +3,15 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   line-height: 1.6;
-  color: var(--dark-brown);
-  background: var(--marble-background);
-  background-attachment: fixed;
+  color: rgb(0, 102, 86) ;
+  background: rgb(0, 102, 86);
+  background-attachment: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
