--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -16,11 +16,13 @@
 }
 
 .hero-section {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   display: flex;
   align-items: flex-end;
   text-align: center;
@@ -32,6 +34,7 @@
   background-attachment: scroll;
   min-height: 100vh;
   overflow: hidden;
+  z-index: 1;
 }
 
 .video-background {
