--- a/puper/frontend/src/styles/globals.css
+++ b/puper/frontend/src/styles/globals.css
@@ -3,15 +3,19 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
+}
+
+html, body {
+  background: rgb(0, 88, 71) !important;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   line-height: 1.6;
-  color: rgb(0, 102, 86) ;
-  background: rgb(0, 102, 86);
-  background-attachment: relative;
+  color: var(--dark-brown);
+  background: #YOUR_COLOR_HERE !important;
+  background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
