--- a/puper/frontend/src/pages/HomePage.css
+++ b/puper/frontend/src/pages/HomePage.css
@@ -16,13 +16,11 @@
 }
 
 .hero-section {
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100vw;
   height: 100vh;
-  margin: 0 !important;
-  padding: 0 !important;
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: flex-end;
   text-align: center;
@@ -34,7 +32,6 @@
   background-attachment: scroll;
   min-height: 100vh;
   overflow: hidden;
-  z-index: 1;
 }
 
 .video-background {
